# gpt-oss-challenge

./: LICENSE  README.md
notebooks/: base_submission.py  final.py  main.py  main2.py  main3.py  metrics_submission.py  ollama_from_kaggle.ipynb  pyproject.toml
notebooks/kaggle_dataset/: README.md  dataset-metadata.json  fallback_payloads.json  requirements.txt
notebooks/kaggle_dataset/docs/: ETHICS_SAFETY.md  EXTENSIONS.md  OVERVIEW.md  REPRODUCIBILITY.md  VALUE.md
notebooks/kaggle_dataset/notebooks/: ollama-base-kaggle.ipynb
notebooks/kaggle_dataset/src/: runner.py
pharmabeaver/: Dockerfile  fly.toml  pyproject.toml  requirements.txt
pharmabeaver/app/: app.py  seed.py
