[project]
name = "notebooks"
version = "0.1.0"
description = ""
authors = [
    {name = "Benjamin Gutierrez",email = "mrbengutierrez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
